# SmartStudy

./: 3_01_baseline_model.ipynb  LICENSE  Makefile  README.md  SmartStudy\notebooks\3_41_final_model.ipynb  StudyArchitects (3).ipynb  StudyArchitects.ipynb  pyproject.toml  requirements.txt
SmartStudy/: requirements.txt
SmartStudy/archives/: StudyArchitects.ipynb
SmartStudy/docs/: mkdocs.yml
SmartStudy/models/: TabPFNRegressor.py  xgboost.py
SmartStudy/notebook/: 3_41_final_model.ipynb
SmartStudy/notebooks/: 1.01-datapreprocessing.ipynb  1_01_datapreprocessing.ipynb  2_01_exploratorydataanalysis.ipynb  3.01-baseline-model.ipynb  3.01_baseline-model.ipynb  3.02-parameter-opt.ipynb  3.11-forest-regression-model-iterations.ipynb  3.12-nn-mlp.ipynb  3.13-evaluation.ipynb  3.14-ensembles.ipynb  3.17-ensemble-stacked.ipynb  3.21-parameter-opt.ipynb  3.21-study-habit-opt.ipynb  3.31-knn-model.ipynb  3.41-final-model .ipynb  3.41.final_model.ipynb  3_01_baseline_model.ipynb  ensembles.py  test.py  (+4 more)
archives/: 2_01_exploratorydataanalysis.ipynb  model_draft_outline.ipynb  predict.py
models/: scaler.pkl
notebooks/: 1.01-data-preprocessing.ipynb  2.01_exploratorydataanalysis.ipynb  2_01_exploratorydataanalysis.ipynb  3.11-tree-based-models.ipynb  3.12-neural-networks.ipynb  3.13-evaluation.ipynb  3.14-ensemble-tabnet-1dcnn.ipynb  3.15-ensemble-TabPFN-XGBoost.ipynb  3.17-evaluation-v2.ipynb  3.21-study-habit-opt.ipynb  3.23-gpt-text-generation.ipynb  3.31-knn-model.ipynb  3.51-final-model .ipynb  4.01-evaluation.ipynb
smartstudy/: app.py  dataset.py  generate_scaler.py
(+75 files in other folders)
