[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "smartstudy"
version = "0.0.1"
description = "Students often feel overwhelmed with work, deadlines, and extracurriculars. The stress of managing these responsibilities can make it difficult for students to establish effective study habits. In this proposal, we discuss the development of a machine learning model designed to recommend personalized lifestyle changes, such as the optimal weekly study time, the need for tutoring, and increased lecture attendance for students. Overall, this tool aims to increase organization and time-management among students and ultimately help them succeed academically."
authors = [
  { name = "The Study Architects" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["smartstudy"]
force_sort_within_sections = true
